# asciivideoproject

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: .gitignore  report.tex
libs/include/libavutil/: ffversion.h
modules/share/ffmpeg/examples/: decode_video.c
src/: frame.c  frame.h  generator.c  generator.h  helpers.c  helpers.h  main.c  pixel.c  pixel.h  player.c  player.h  specs.c  specs.h  video.c  video.h
